
        * Add the API elm_scroller_page_scroll_limit_set/get.
        It sets the maxium of the movable page at flicking.

2013-04-08  Jaehwan Kim

        * Quit the scroll animator if the scroller don't have a bounce and reach a edge.

2013-04-08  Jaehwan Kim

        * Fix the scroller show by a page if the page size is set and the region_bring_in or region_show is called.

2013-04-08  Rafael Antognolli

        * Fix layout_example_02.
        * Fix hoversel_example_01.

2013-04-09  Daniel Juyung Seo (SeoZ)

        * Fix elc_player crash issue.

2013-04-09 Carsten Haitzler (The Rasterman)

        * Add elm_mapbuf_auto_set()/elm_mapbuf_auto_get()

2013-04-09  WooHyun Jung

        * Ctxpopup is now supproting focus_direction.

2013-04-10  Jaehwan Kim

        * Fix the region_show/region_bring_in don't have a limit at a paging movement.

2013-04-10  Jaehwan Kim

        * Add the API elm_scroller_single_direction_set/get.
        This sets how the content is scrolled.

2013-04-10  Jaehwan Kim

        * Fix the calculation double type number.
        Round off to the nearest whole number.

2013-04-15  Jaehwan Kim

        * Add the feature for key events.

2013-04-16  Jaehwan Kim

        * Fix the policy is not changed when the theme is changed.
        The "reload" signal from edc is necessary always.

2013-04-16  WooHyun Jung

        * When entry is disabled, scrolling is also disabled.

2013-04-17  ChunEon Park

        * Don't try to pop the naviframe item multiple times.

2013-04-18  Shinwoo Kim

        * Add elm_access_action(), elm_access_action_cb_set()

2013-04-22  Shinwoo Kim

        * Make access object unfocusable when Aaccessibility is disabled.

2013-04-23  ChunEon Park

        * Added elm_object_domain_part_text_translatable_set().

2013-04-23  Jaehwan Kim

        * Fix the scrolled entry in scroller is located wrong position when the cursor is changed.
        It is a scroller in scroller. In this case, it moved twice.